--- a/src/input.css
+++ b/src/input.css
@@ -10,7 +10,15 @@
         outline: none;
         box-sizing: border-box;
     }
+}
 
+@layer components {
+    .btn:hover {
+        background-color: rgb(255, 174, 0);
+        color: black;
+    }
+}
+@layer utilities{
     .topleftcontact {
         cursor: pointer;
     }
@@ -33,12 +41,5 @@
     .herocontent__title {
         width: 882px;
         font-size: 64px;
-    }
-}
-
-@layer components {
-    .btn:hover {
-        background-color: rgb(255, 174, 0);
-        color: black;
     }
 }
